...
                                        ),
                                        Tab(
                                          key: ValueKey('Tab_mxm0'),
                                          text: 'Sign Up',
                                        ),
...
                                                    child: TextFormField(
                                                      key: ValueKey(
                                                          'Email_otuq'),
                                                      controller: _model
                                                          .emailTextController,
...
                                                    child: TextFormField(
                                                      key: ValueKey(
                                                          'password_3sje'),
                                                      controller: _model
                                                          .passwordTextController,
...
                                                    child: FFButtonWidget(
                                                      key: ValueKey(
                                                          'Button_khu9'),
                                                      onPressed: () async {
                                                        logFirebaseEvent(
...
                                                    child: TextFormField(
                                                      key: ValueKey(
                                                          'emailAddress_Create_knye'),
                                                      controller: _model
                                                          .emailAddressCreateTextController,
...
                                                    child: TextFormField(
                                                      key: ValueKey(
                                                          'username_Create_woxo'),
                                                      controller: _model
                                                          .usernameCreateTextController,
...
                                                    child: TextFormField(
                                                      key: ValueKey(
                                                          'password_Create_im95'),
                                                      controller: _model
                                                          .passwordCreateTextController,
...
                                                    child: TextFormField(
                                                      key: ValueKey(
                                                          'passwordConfirm_rl93'),
                                                      controller: _model
                                                          .passwordConfirmTextController,
...
                                                    child: FFButtonWidget(
                                                      key: ValueKey(
                                                          'Button_uecx'),
                                                      onPressed: () async {
                                                        logFirebaseEvent(
...
