...
                                        ),
                                      ),
                                      child: Align(
                                        alignment:
                                            AlignmentDirectional(0.0, 0.0),
                                        child: Text(
                                          key: ValueKey('Greeting_ccsp'),
                                          'Bread Bot',
                                          style: FlutterFlowTheme.of(context)
                                              .headlineSmall
                                              .override(
                                                font: GoogleFonts.lemon(
                                                  fontWeight:
...
                              Expanded(
                                child: Align(
                                  alignment: AlignmentDirectional(0.0, 3.0),
                                  child: Container(
                                    width: 300.0,
                                    child: TextFormField(
                                      key: ValueKey('ChatPrompt_z13u'),
                                      controller:
                                          _model.chatPromptTextController,
                                      focusNode: _model.chatPromptFocusNode,
                                      autofocus: false,
                                      obscureText: false,
                                      decoration: InputDecoration(
...
                                          .asValidator(context),
                                    ),
                                  ),
                                ),
                              ),
                              FlutterFlowIconButton(
                                key: ValueKey('IconButton_x0vf'),
                                buttonSize: 50.0,
                                fillColor: FlutterFlowTheme.of(context).primary,
                                icon: Icon(
                                  Icons.send_rounded,
                                  color: Colors.white,
                                  size: 24.0,
...
