...
                                          elevation: 10.0,
                                          shape: RoundedRectangleBorder(
                                            borderRadius:
                                                BorderRadius.circular(12.0),
                                          ),
                                          child: Container(
                                            key: ValueKey('Container_2wn6'),
                                            height: 220.0,
                                            decoration: BoxDecoration(
                                              color:
                                                  FlutterFlowTheme.of(context)
                                                      .secondaryText,
                                              borderRadius:
...
                                    0.0,
                                  ),
                                  0.0,
                                  0.0,
                                  0.0),
                              child: FFButtonWidget(
                                key: ValueKey('Button_xzyy'),
                                onPressed: () async {
                                  logFirebaseEvent('HOME_PAGE__BTN_ON_TAP');
                                  if (FFAppState().IsSideBarExpanded) {
                                    logFirebaseEvent('Button_update_app_state');
                                    FFAppState().IsSideBarExpanded = false;
                                    safeSetState(() {});
...
